objects/Emirates__c.object
<CustomObject>
    <fields>
        <fullName>CopadoExtID__c</fullName>
        <externalId>true</externalId>
        <label>CopadoExtID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hummus</fullName>
                </value>
                <value>
                    <fullName>Halloumi</fullName>
                </value>
                <value>
                    <fullName>Falafel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Emirates</label>
    <nameField>
        <label>Emirates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Emirates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>